# LeetCute

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
gemm/: CMakeLists.txt  Makefile  README.md  gemm_kernel.h  gemm_v1.cu  main.cu  my_gemm_baseline.cu
reduce/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  my_reduce  my_reduce.cu  my_reduce_baseline  my_reduce_baseline.cu  my_reduce_no_warp_conflict  my_reduce_no_warp_conflict.cu  my_reduce_share_memory  my_reduce_share_memory.cu  my_reduce_use_idle_thread  my_reduce_use_idle_thread.cu  my_reduce_warp_divergence  my_reduce_warp_divergence.cu  my_reduce_warp_shulf  my_reduce_warp_shulf.cu
